testing fix for input shadows on mobile

--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -28,8 +28,9 @@ input {
 input[type='number']::-webkit-inner-spin-button,
 input[type='number']::-webkit-outer-spin-button,
 input[type='search']::-webkit-search-cancel-button,
-input[type='search']::-webkit-search-decoration {
-  appearance: none;
+input[type='search']::-webkit-search-decoration,
+input[type='search'] {
+  -webkit-appearance: none;
 }
 button {
   border: none;
